--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,7 @@
 
 	<div id="home" data-role="page" class="active">
 		<h1>It has Never Been This Easy!</h1>
-		<p>Congratulations! You have found the best and most sophisticated tracking application in the world. This mobile application was designed with the help of NASA engineers with over 9000 man-hours of labor. Your desire to find track your geolocation can finally be fulfilled along with the satisfaction of learning something new about a contact on your device. This app will soon dominate the universe! Click the button below to get access to top-secret resources.</p>
+		<p>Congratulations! You have found the best and most sophisticated tracking application in the world. This mobile application was designed with the help of NASA engineers with over 9000 man-hours of labor. Your desire to track your geolocation can finally be fulfilled along with the satisfaction of learning something new about a contact on your device. This app will soon dominate the universe! Click the button below to get access to top-secret resources.</p>
 		<a href="#author" data-role="link"><button class="button">Bonus Page!</button></a>
 	</div>
 
